--- a/src/main/resources/templates/book/index.html
+++ b/src/main/resources/templates/book/index.html
@@ -4,6 +4,9 @@
   <title th:text="${title}">title</title>
   <link href="/css/style.css" rel="stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+  <script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
+  <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
 </head>
 <body>
 <p>本屋さん</p>
@@ -13,6 +16,7 @@
 </form>
 <form action="/book/search" method="post">
   <div><input class="list" type="submit" name="showList" value="一覧表示"/></div>
+  <button type="button" class="btn btn-primary">ボタン</button>
 </form>
 
 <div th:if="${book} !=null" th:object="${book}">
