--- a/src/main/resources/templates/bookList/bookList.html
+++ b/src/main/resources/templates/bookList/bookList.html
@@ -8,7 +8,7 @@
 	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
 </head>
 <body>
-	<div th:replace="bookList/share::header"></div>
+	<div th:replace="~{bookList/share::header}"></div>
     <div class="container">
 		<div class="row">
 			<div th:each="book : ${bookList}" th:object="${book}" class="card col-3 me-2 mb-2" style="width: 18rem;">
